"#20 refactored open api spec, regenerated models"
