# app/src/main/java/com/provider/controller/ProviderApi.java
@@ -21,25 +21,6 @@ import org.springframework.web.bind.annotation.*;
 public interface ProviderApi {
 
   /**
-   * GET /api/v1/provider Get all providers
-   *
-   * @param X_ACCOUNT_ID (required)
-   * @param page (required)
-   * @param pageSize (optional)
-   * @return fetched (status code 200) or Bad request! (status code 400)
-   */
-  @RequestMapping(
-      method = RequestMethod.GET,
-      value = "/api/v1/provider",
-      produces = {"application/json"})
-  ResponseEntity<ProviderGetAllReturnModel> apiV1ProviderGet(
-      @NotNull @RequestHeader(value = "X-ACCOUNT-ID", required = true) UUID X_ACCOUNT_ID,
-      @NotNull @Valid @RequestParam(value = "page", required = true) Integer page,
-      @Min(20) @Max(100) @Valid @RequestParam(value = "page-size", required = false)
-          Integer pageSize)
-      throws Exception;
-
-  /**
    * POST /api/v1/provider Insert provider
    *
    * @param X_ACCOUNT_ID (required)
@@ -52,9 +33,28 @@ public interface ProviderApi {
       value = "/api/v1/provider",
       produces = {"application/json"},
       consumes = {"application/json"})
-  ResponseEntity<ProviderReturnModel> apiV1ProviderPost(
+  ResponseEntity<ProviderReturnModel> addProvider(
       @NotNull @RequestHeader(value = "X-ACCOUNT-ID", required = true) UUID X_ACCOUNT_ID,
       @Valid @RequestBody ProviderRequestModel providerRequestModel)
+      throws Exception;
+
+  /**
+   * GET /api/v1/provider Get all providers
+   *
+   * @param X_ACCOUNT_ID (required)
+   * @param page (required)
+   * @param pageSize (optional)
+   * @return fetched (status code 200) or Bad request! (status code 400)
+   */
+  @RequestMapping(
+      method = RequestMethod.GET,
+      value = "/api/v1/provider",
+      produces = {"application/json"})
+  ResponseEntity<ProviderGetAllReturnModel> getAllProviders(
+      @NotNull @RequestHeader(value = "X-ACCOUNT-ID", required = true) UUID X_ACCOUNT_ID,
+      @NotNull @Valid @RequestParam(value = "page", required = true) Integer page,
+      @Min(20) @Max(100) @Valid @RequestParam(value = "page-size", required = false)
+          Integer pageSize)
       throws Exception;
 
   /**
@@ -70,7 +70,7 @@ public interface ProviderApi {
       value = "/api/v1/provider/{provider-id}",
       produces = {"application/json"},
       consumes = {"application/json"})
-  ResponseEntity<ProviderReturnModel> apiV1ProviderProviderIdPatch(
+  ResponseEntity<ProviderReturnModel> patchProvider(
       @NotNull @RequestHeader(value = "X-ACCOUNT-ID", required = true) UUID X_ACCOUNT_ID,
       @PathVariable("provider-id") Long providerId,
       @Valid @RequestBody ProviderUpdateRequestModel providerUpdateRequestModel)
